cloud-connect/jwt-service/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jwt-service
  namespace: cloud-connect
spec:
  ingressClassName: ext-general
  tls:
  - hosts:
    - dev-cloud-connect.opusxenta.dev
    secretName: cert-dev-cloud-connect.opusxenta.dev
  rules:
  - host: dev-cloud-connect.opusxenta.dev
    http:
      paths:
      - path: /oauth
        pathType: Prefix
        backend:
          service:
            name: jwt-service
            port:
              number: 3000
      - path: /jwt-doc
        pathType: Prefix
        backend:
          service:
            name: jwt-service
            port:
              number: 3000
